--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
+    "@mui/styled-engine-sc": "^5.10.16",
     "@popperjs/core": "^2.11.6",
     "@react-oauth/google": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.6.0",
+    "react-leaf-carousel": "^3.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -29,6 +38,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "reveal": "^0.0.4",
+    "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.11",
     "web-vitals": "^2.1.4"
   },
