--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "mdb-react-ui-kit": "^5.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
