--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
+    "highcharts-react": "^0.0.3",
     "html2canvas": "^1.4.1",
     "mdb-react-ui-kit": "^5.0.0",
     "moment": "^2.29.4",
@@ -36,6 +37,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
+    "recharts": "^2.2.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
